--- a/templates/photosall.html
+++ b/templates/photosall.html
@@ -1,60 +1,90 @@
 {% extends "base.html" %}
-
-{% block head %}
-<title>{{ escape(handler.settings["website_title"]) }}</title>
+ {% block head %}
+<title>{{ user.nickname }}的所有照片 | {{ escape(handler.settings["website_title"]) }}</title>
 <link rel="stylesheet" href="/static/css/album.css">
-{% end %}
+ {% end %}
 
-{% block body %}
-<script src="{{static_url("js/jquery-3.2.1.min.js")}}"></script> {#jquery文件位置#}
+  {% block body %}
 <!--这里是个人相册标题和概要-->
 <section class="jumbotron">
-  <div class="container">
-    <h1 class="jumbotron-heading">{{ user.name }}</h1>
-    <p>
-      <a href="#" class="btn btn-primary my-2">给我打赏</a>
-      <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
-    </p>
-  </div>
-</section>
+    <div class="container">
+      <div class="row">
+        <div class="col-md-2">
+          <img class="rounded-circle" src="/static/img/face.jpg" alt="Generic placeholder image" width="140" height="140">
+        </div>
+        <div class="col-md-10">
+          <h1 class="jumbotron-heading text-white">{{ user.nickname }}</h1>
+          <p>
+            <a href="#" class="btn btn-primary my-2">给我打赏</a>
+            <a href="http://wpa.qq.com/msgrd?v=3&uin=494800279&site=qq&menu=yes" class="btn btn-secondary my-2">联系我</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
 <!--这里是相册列表主框架-->
-<div >
 
-</div>    
-
-<div class="photos py-5 bg-light">      
+<div class="photos py-5 bg-light">
   <div class="container">
     <div class="card text-center">
-        <div class="container mt-4 ml-2 text-left">
-            共有照片  {{ len(photos[0]) }}
+        <div class="card-header">
+            <ul class="nav nav-tabs card-header-tabs">
+              <li class="nav-item">
+                <a class="nav-link" href="/pro">关于我</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="/u/{{ user.id }}/photos/">所有照片</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/u/{{ user.id }}/albums/">相册</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">视频</a>
+              </li>
+            </ul>
           </div>
 
+
       <div class="card-body">
-        
+
+          {% if not photos %}
+          <h5 class="card-title">还没有照片</h5>
+          <p class="card-text">快去上传些照片吧</p>
+          <a href="/photos/new" class="btn btn-primary">上传相片</a>
+          <a href="/albums/new" class="btn btn-primary">新建相册</a>
+          {% else %} 
+          <div class="container mt-4 ml-2 text-left">
+              共有照片 {{ len(photos) }}
+            </div>
+            <div class="container mt-4 mr-4 text-right">
+              <a class="btn btn-outline-primary btn-sm" href="/photos/new" role="button">上传照片</a>
+              <a class="btn btn-outline-secondary btn-sm" href="/albums/new" role="button">新建相册</a>
+            </div>
         <div class="row">
-            
-          {% for photo in photos[0]%}
+          {% for photo in photos %}
           <div class="col-md-3">
             <div class="card mb-3 box-shadow">
-              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "src="/static/images/{{photo.file_name}}" alt="Card image cap"></a>
-              
+              <img class="card-img-top" data-src="holder.js/100px180?theme=thumb&bg=55595c&fg=eceeef&text=缩略图" height="180" width="300 "
+                src="/static/images/min/{{photo.photo_id}}.jpg" alt="Card image cap">
+              </a>
+
               <div class="card-body align-items-left">
                 <div class="d-flex justify-content-between align-items-left">
                   <div class="btn-group">
-                      <small class="text-muted">创建于{{ photo.update_date }}</small>
+                    <small class="text-muted">创建于{{ photo.update_date }}</small>
                   </div>
-                  
+
                 </div>
               </div>
-        
+
             </div>
           </div>
-          {% end %}
+          {% end %} {% end %}
         </div>
       </div>
     </div>
   </div>
-  </div>
+</div>
 {% end %}
 
 
